# findme

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.base.json  turbo.json
services/api/: Dockerfile  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 001_initial.py  002_keywords_content.py  003_integrations_billing.py  004_phase3.py  005_citation_results.py
services/api/app/: celery_app.py  config.py  main.py
services/api/app/agents/: ai_visibility.py  base.py  content_generation.py  outreach.py  seo_intelligence.py  visual_content.py
services/api/app/db/: session.py
services/api/app/db/models/: __init__.py  agent_job.py  campaign.py  citation_result.py  cms_connection.py  competitor.py  content_item.py  keyword.py  keyword_ranking.py  org.py  outreach_opportunity.py  project.py  publish_record.py  social_connection.py  social_post.py  user.py  visibility_score_history.py  visual_asset.py
services/api/app/integrations/cms/: base.py  (+3 more)
services/api/app/routers/: agents.py  analytics.py  audit.py  billing.py  campaigns.py  citation.py  content.py  health.py  integrations.py  keywords.py  outreach.py  projects.py
services/api/app/services/: aeo_scorer.py  anthropic_client.py  citation_simulator.py  dataforseo.py  llms_txt.py  replicate_client.py  schema_markup.py  stripe_service.py  vault.py  visibility_score.py
services/api/app/tasks/: agent_tasks.py  analytics_tasks.py  campaign_tasks.py  citation_tasks.py  publish_tasks.py
(+36 files in other folders)
