[project]
name = "findme-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.14.0",
    "celery[redis]>=5.4.0",
    "celery-redbeat>=2.3.0",
    "redis[asyncio]>=5.2.0",
    "anthropic>=0.40.0",
    "httpx>=0.28.0",
    "python-jose[cryptography]>=3.3.0",
    "pgvector>=0.3.6",
    "stripe>=11.0.0",
    "cryptography>=43.0.0",
    "boto3>=1.35.0",
    "croniter>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
